added message sending mechanism for websocket

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,15 @@
 idf_component_register(SRCS "src/main.c"
     "src/config.c"
+    "src/config_json.c"
     "src/file.c"
+    "src/message_json.c"
     "src/wifi_connect.c"
     "src/fs_init.c"
     "src/rest_base.c"
     "src/rest_server.c"
     "src/rest_wildcard.c"
     "src/rest_system_info.c"
+    "src/wifi_config_json.c"
     "src/jetpack_main.c"
     "src/jetpack_rest.c"
     INCLUDE_DIRS ".")
