wifi ap mode for configuring the wifi settings + rest server to present the configuration page

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,7 +9,9 @@ idf_component_register(SRCS "src/main.c"
     "src/rest_server.c"
     "src/rest_wildcard.c"
     "src/rest_system_info.c"
+    "src/rest_wifi.c"
     "src/wifi_config_json.c"
+    "src/wifi_ap.c"
     "src/jetpack_main.c"
     "src/websocket_server.c"
     "src/websocket_server_start.c"
