github actions test

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
+# This is a esp idf workflow to build ESP32 based project
+
 name: Build and Artifact the ESP-IDF Project
 
+# Controls when the action will run.
 on:
   # Triggers the workflow on tag create like v1.0, v2.0.0 and so on
   push:
@@ -9,8 +12,11 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
       - name: Install ESP-IDF and Build project
@@ -19,10 +25,11 @@ jobs:
           esp_idf_version: 'v4.4'
           esp_idf_target: 'esp32'
 
-      - run: ./package.sh
-
       - name: Archive build output artifacts
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: build/package/**
+          path: |
+            build/bootloader/bootloader.bin
+            build/partition_table/partition-table.bin
+            build/${{ github.event.repository.name }}.bin
