--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,16 @@
-# This is a esp idf workflow to build ESP32 based project
-
-name: Build and Artifact the ESP-IDF Project
-
-# Controls when the action will run.
-on:
-  # Triggers the workflow on tag create like v1.0, v2.0.0 and so on
-  push:
-    tags:
-      - 'v*'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-      - name: Install ESP-IDF and Build project
-        uses: rmshub/esp-idf-action@v4
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
         with:
-          esp_idf_version: 'v4.4'
-          esp_idf_target: 'esp32'
-
-      - name: Archive build output artifacts
-        uses: actions/upload-artifact@v2
+          submodules: 'recursive'
+      - name: esp-idf build
+        uses: espressif/esp-idf-ci-action@main
         with:
-          name: build
-          path: |
-            build/bootloader/bootloader.bin
-            build/partition_table/partition-table.bin
-            build/${{ github.event.repository.name }}.bin
+          esp_idf_version: v4.4
+          target: esp32s2
+          path: './'
