--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,17 @@
+# This is a esp idf workflow to build ESP32 based project
+
+name: Build and Artifact the ESP-IDF Project
+
+# Controls when the action will run.
+on:
+  # Triggers the workflow on tag create like v1.0, v2.0.0 and so on
+  push:
+    tags:
+      - 'v*'
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
 
