--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -24,3 +24,9 @@ jobs:
           esp_idf_version: v4.4
           target: esp32
           path: './'
+      - run: ./package.sh
+      - name: Archive build output artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build/package/**
