--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -32,5 +32,15 @@ jobs:
             build/config.bin
             build/www.bin
             build/OpenPyrojet.bin
-            build/flash.sh
-            build/flash.bat
+            tools/flash.sh
+#  finalize:
+#      runs-on: ubuntu-latest
+#      steps:
+#        - name: Download Artifacts
+#          uses: actions/download-artifact@master
+#          with:
+#            name: build
+#            path: build
+#        - name: Display structure of downloaded files
+#          run: ls -R
+#          working-directory: build/
