implemented configurable display

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,10 +2,12 @@ idf_component_register(SRCS "src/main.c"
     "src/config.c"
     "src/config_json.c"
     "src/display.c"
+    "src/display_config.c"
+    "src/display_config_json.c"
     "src/file.c"
-    "src/message_json.c"
-    "src/wifi_connect.c"
     "src/fs_init.c"
+    "src/json.c"
+    "src/message_json.c"
     "src/rest_base.c"
     "src/rest_server.c"
     "src/rest_wildcard.c"
@@ -17,6 +19,7 @@ idf_component_register(SRCS "src/main.c"
     "src/websocket_server.c"
     "src/websocket_server_start.c"
     "src/websocket_handler.c"
+    "src/wifi_connect.c"
     "src/ssd1306/ssd1306.c"
     "src/ssd1306/ssd1306_i2c.c"
     "src/ssd1306/ssd1306_spi.c"
