--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -19,6 +19,7 @@ idf_component_register(SRCS "src/main.c"
     "src/websocket_server.c"
     "src/websocket_server_start.c"
     "src/websocket_handler.c"
+    "src/wifi_config.c"
     "src/wifi_connect.c"
     "src/ssd1306/ssd1306.c"
     "src/ssd1306/ssd1306_i2c.c"
