implemented AppState, StateMachine and DisplayPage - AppState now holds Config and IP state - StateMachine is a generic state machine implementation - DisplayPage is a paging/screen showing implementation to show various 'pages' on the display. It is implmeneted as a state machine.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,24 +1,27 @@
-idf_component_register(SRCS "src/main.c"
+idf_component_register(SRCS "src/app_state.c"
     "src/config.c"
     "src/config_json.c"
     "src/display.c"
     "src/display_config.c"
     "src/display_config_json.c"
+    "src/display_page.c"
     "src/file.c"
     "src/fs_init.c"
+    "src/jetpack_io.c"
     "src/json.c"
+    "src/main.c"
     "src/message_json.c"
     "src/rest_base.c"
     "src/rest_server.c"
-    "src/rest_wildcard.c"
-    "src/rest_wifi.c"
-    "src/wifi_config_json.c"
-    "src/wifi_ap.c"
-    "src/jetpack_main.c"
+    "src/rest_handler_wildcard.c"
+    "src/rest_handler_wifi.c"
+    "src/state_machine.c"
     "src/websocket_server.c"
     "src/websocket_server_start.c"
     "src/websocket_handler.c"
+    "src/wifi_ap.c"
     "src/wifi_config.c"
+    "src/wifi_config_json.c"
     "src/wifi_connect.c"
     "src/ssd1306/ssd1306.c"
     "src/ssd1306/ssd1306_i2c.c"
