--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,10 +11,10 @@ idf_component_register(SRCS "src/app_state.c"
     "src/json.c"
     "src/main.c"
     "src/message_json.c"
-    "src/rest_base.c"
-    "src/rest_server.c"
     "src/rest_handler_wildcard.c"
     "src/rest_handler_wifi.c"
+    "src/rest_server.c"
+    "src/rest_utils.c"
     "src/state_machine.c"
     "src/websocket_server.c"
     "src/websocket_server_start.c"
