improved config mode

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,8 +11,9 @@ idf_component_register(SRCS "src/app_state.c"
     "src/json.c"
     "src/main.c"
     "src/message_json.c"
+    "src/rest_handler_config.c"
+    "src/rest_handler_reboot.c"
     "src/rest_handler_wildcard.c"
-    "src/rest_handler_wifi.c"
     "src/rest_server.c"
     "src/rest_utils.c"
     "src/state_machine.c"
