--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ project(OpenPyrojet)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMAKE")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(EXTRA_COMPONENT_DIRS $CMAKE_CURRENT_SOURCE_DIR/components/u8g2 $CMAKE_CURRENT_SOURCE_DIR/components/u8g2-esp32-hal)
