various fixes and cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: esp-idf build
         uses: espressif/esp-idf-ci-action@main
         with:
