--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
-          submodules: 'recursive'
+          submodules: recursive
       - name: esp-idf build
         uses: espressif/esp-idf-ci-action@main
         with:
